rectifying case notes alignment issues (#2518)

--- a/assets/sass/local.sass
+++ b/assets/sass/local.sass
@@ -3,3 +3,18 @@
 
 .govuk-width-container
   @include govuk-width-container(1220px)
+
+.wrapped-text
+  white-space: normal;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  display: inline-block;
+  max-width: 100%;
+
+.govuk-table
+  table-layout: fixed;
+  width: 100%;
+
+
+.govuk-table td 
+  vertical-align: top;
